--- a/css/custom.css
+++ b/css/custom.css
@@ -63,6 +63,23 @@
 */
 
 
+.container {
+  display: table;
+  width: 100%;
+}
+
+.row {
+  height: 100%;
+  display: table-row;
+}
+
+.col-sm-6,
+.col-xs-12,
+.col-sm-8,
+.col-md-4,
+.col-md-6 {
+  display: table-cell;
+}
 
 /* Navbar
  *--------------------------------------------------*/
