--- a/css/custom.css
+++ b/css/custom.css
@@ -154,7 +154,7 @@
 }
 
 .navbar-brand .img-responsive {
-  max-width: 75%;
+  max-width: 85%;
   margin-left: 5px;
 }
 
@@ -492,6 +492,16 @@
   /* Navbar
    *----------------------------------*/
 
+  .navbar-brand .img-responsive {
+    max-width: 100%;
+    margin-left: -5px;
+  }
+
+  .navbar-brand {
+    margin: 11px 0px !important;
+  }
+
+
   .navbar-default .container {
     padding-right: 0px
   }
@@ -513,6 +523,22 @@
   .navbar-default .navbar-nav li a,
   .navbar-default .btn-link {
     font-size: 0.82em;
+  }
+
+  .navbar .dropdown-menu li a {
+    padding: 11px 20px 7px 20px;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu > #borda > a {
+    border-top: 1px solid #e3e3e3;
+  }
+
+  .navbar-right .dropdown-menu {
+    right: 9px;
+  }
+
+  .dropdown-menu {
+    min-width: 235px;
   }
 
   /* Intro
@@ -577,6 +603,10 @@
   /* Navbar
    *----------------------------------*/
 
+  .navbar-brand .img-responsive {
+    margin-left: 5px;
+  }
+ 
   .navbar-default .navbar-nav li a,
   .navbar-default .btn-link {
     font-size: 1.1em;
@@ -606,7 +636,6 @@
     width: 55%;
   }
 
-
 }
 
 
@@ -616,8 +645,25 @@
 
   /* Intro
    *----------------------------------*/
+  .intro-section .container-fluid {
+    margin-left: 30px;
+  }
 
+  .intro-section h2 {
+    margin-top: 0px;
+  }
 
+  .intro-section p {
+    font-size: 1.4em;
+  }
+
+  .intro-section small {
+    font-size: 78%;
+  }
+
+  .introsection a {
+    font-weight: bold;
+  }
 
   /* Certificado Digital
    *----------------------------------*/
@@ -663,7 +709,7 @@
 }
 
 
-/* Large devices (large desktops, larguras a partir de 1200px) */
+/* Large devices (large desktops, larguras a partir de 1201px) */
 @media screen and (min-width: 1201px) {
 
   .container {
@@ -674,6 +720,10 @@
 
   /* Navbar
    *----------------------------------*/
+
+  .navbar-brand .img-responsive {
+    margin-left: 34px;
+  }
 
 
   /* Credit Service
